<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textAlignment="textStart"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:justificationMode="inter_word"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/stetho" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="hello"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_gravity="end"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2a"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:justificationMode="inter_word"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="198dp"
            android:contentDescription="@string/description"
            android:src="@drawable/overallstructure" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Overall structure of the assisted diagnosis "
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:layout_gravity="end"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="---------------------------------"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_gravity="end"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guidance"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_gravity="end"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/vksharma"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/joseph"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialist"
            android:layout_marginTop="40dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_gravity="end"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/vishal"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/deepak"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funding"
            android:layout_marginTop="40dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_gravity="end"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/manoj"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/anil"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/cdac"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:textSize="15sp"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>