<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AI_Engine">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AI_Heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterData"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="25sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/age">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/fever">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioCough"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cough"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/yesCough"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>
                <RadioButton
                    android:id="@+id/noCough"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/no"/>
            </LinearLayout>

        </RadioGroup>
        <RadioGroup
            android:id="@+id/radioChest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chest"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/yesChest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>
                <RadioButton
                    android:id="@+id/noChest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/no"/>
            </LinearLayout>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/radioBreathing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breathing"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/fast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fast"/>
                <RadioButton
                    android:id="@+id/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/normal"/>
                <RadioButton
                    android:id="@+id/irregullar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/irregular"/>
            </LinearLayout>
        </RadioGroup>

        <!--     <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/upload"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textAlignment="center"/>-->
        <Button
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:onClick="runAIEngine"
            android:backgroundTint="@color/teal_700"
            />
    </LinearLayout>
</ScrollView>